--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -5,7 +5,7 @@ on:
   # Runs on pushes targeting the default branch
   push:
     branches:
-      - prod
+      - main
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -26,7 +26,6 @@ concurrency:
 defaults:
   run:
     shell: bash
-    working-directory: aidley.com
 
 jobs:
   # Build job
@@ -61,6 +60,7 @@ jobs:
             --gc \
             --minify \
             --baseURL "${{ steps.pages.outputs.base_url }}/"
+          working-directory: aidley.com
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
