--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -59,8 +59,8 @@ jobs:
           hugo \
             --gc \
             --minify \
-            --baseURL "${{ steps.pages.outputs.base_url }}/"
-          working-directory: aidley.com
+            --baseURL "${{ steps.pages.outputs.base_url }}/" \
+            --configDir aidley.com
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
