--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -60,7 +60,8 @@ jobs:
             --gc \
             --minify \
             --baseURL "${{ steps.pages.outputs.base_url }}/" \
-            --config ./aidley.com/hugo.toml
+            --config ./aidley.com/hugo.toml \
+            --configDir ./aidley.com/
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
