--- a/aidley.com/hugo.toml
+++ b/aidley.com/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://tim.aidley.com/'
+baseURL = 'https://timaidley.github.io/'
 languageCode = 'en-us'
 title = 'Tim Aidley Dot Com'
 theme = 'soho'
