remove www from base url

--- a/aidley.com/hugo.toml
+++ b/aidley.com/hugo.toml
@@ -1,6 +1,6 @@
-baseURL = 'https://timaidley.github.io/'
+baseURL = 'https://aidley.com/'
 languageCode = 'en-us'
-title = 'Tim Aidley Dot Com'
+title = 'Tim Aidley'
 theme = 'anatole'
 
 
