submodule fix and domain back to www.aidley.com

--- a/aidley.com/hugo.toml
+++ b/aidley.com/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://aidley.com/'
+baseURL = 'https://www.aidley.com/'
 languageCode = 'en-us'
 title = 'Tim Aidley'
 theme = 'anatole'
